# Segmentaci-n-mediante-Clustering

./: README.md  pyproject.toml  run_clustering.py
data/processed/: alojamientos_booking_Granada_2024_cleaned.csv
src/: clustering.py  data_preparation.py
